Fix bug where reading of feedback text and correct answers is overlapping, fix cut statistic window for smaller screen-resolutions, update audio-on-image button to be always coloured and centered on the image window

--- a/src/main/resources/css/audio-on-image-button.css
+++ b/src/main/resources/css/audio-on-image-button.css
@@ -21,7 +21,7 @@
 
 .button {
     -fx-width: 80%;
-    -fx-background-color: white;
+    -fx-background-color: lightgray;
     -fx-background-image: url('../icons/audio.png');
     -fx-background-repeat: no-repeat;
     -fx-background-position: center;
